--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-scipy==1.1.0
-matplotlib==3.1.1
-numpy==1.15.4
 ib_insync==0.9.65
+scipy==1.1.0
+dtw_python==1.1.7
+numpy==1.16.1
 streamlit==0.78.0
 pandas==0.25.3
+matplotlib==3.1.1
+dtw==1.4.0
